# ai-platform-engineering

./: # Plan: Pam Beesly — Pod Meeting Assista.prompt.md  .cursorrules  .dockerignore  .env.example  .event-stream.txt.swp  .git_commit_msg.txt  .gitattributes  .gitignore  .gitleaksignore  .grype.yaml  A2A_INTEGRATION_ARCHITECTURE.md  ADOPTERS.md  AGENTS.md  AGENT_GENERATOR_FEATURE.md  AGENT_GENERATOR_TEST_REPORT.md  BLOCKERS.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  COMPREHENSIVE_CODE_DOCUMENTATION.md  CONTRIBUTING.md  DEMO.md  Dockerfile.tracing  GRAFANA-AGENT-MIGRATION-PLAN.md  ID_SYSTEMS_ANALYSIS.md  MAINTAINERS.md  MONGODB_CHAT_HISTORY_SUMMARY.md  Makefile  NEXT_STEPS.md  NOTICE  PLAN-custom-agents-ux.md  PLAN-dynamic-agent-builder.md  PLAN-dynamic-agent-timeline.md  PLAN-dynamic-agents-cleanup.md  PLAN.md  PR.md  PR_BODY.md  PR_DESCRIPTION.md  PR_DESCRIPTION.txt  PR_HITL_FORMS.md  (+38 more)
ai_platform_engineering/agents/argocd/: CHANGELOG.md  Makefile  README.md  pyproject.toml
ai_platform_engineering/agents/cloudability/: Makefile  README.md  pyproject.toml
ai_platform_engineering/agents/jira/: Makefile  README.md  pyproject.toml
ai_platform_engineering/agents/kubernetes/: Makefile  README.md  pyproject.toml
ai_platform_engineering/agents/mas-agent-base/: Makefile  __init__.py  pyproject.toml
ai_platform_engineering/agents/slack/: Makefile  README.md  pyproject.toml
ai_platform_engineering/agents/splunk/: README.md  pyproject.toml
ai_platform_engineering/agents/tome/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai_platform_engineering/agents/victorops/: .dockerignore  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
ai_platform_engineering/agents/weather/: main.py  pyproject.toml
ai_platform_engineering/agents/webex/: README.md  pyproject.toml
ai_platform_engineering/autonomous_agents/: README.md  pyproject.toml
ai_platform_engineering/autonomous_agents/tests/: __init__.py  conftest.py  test_a2a_client.py  test_circuit_breaker.py  test_config.py  test_dynamic_agents_client.py  test_models.py  test_mongo_service.py  test_preflight.py  test_scheduler.py  test_scheduler_followup.py  test_scheduler_run_store.py  test_tasks_dynamic_agent_branch.py  test_tasks_route.py  test_trigger_instances.py  test_webex_inbound.py  test_webex_route.py  test_webex_threads.py  test_webhook_adapters.py  test_webhooks.py  test_webhooks_followup.py
ai_platform_engineering/cron-runner/: Dockerfile  README.md  pyproject.toml
ai_platform_engineering/cron-runner/caipe_cron_runner/: __about__.py  __init__.py  runner.py
ai_platform_engineering/cron-runner/tests/: test_runner.py
ai_platform_engineering/dynamic_agents/: ARCHITECTURE.md  README.md  SSE_EVENTS.md  SSE_EVENTS_REFACTOR.md  gunicorn.conf.py  pyproject.toml
ai_platform_engineering/dynamic_agents/tests/: test_agent_runtime_memory.py  test_agent_runtime_warnings.py  test_agui_sse_namespace.py  test_auth.py  test_authz.py  test_authz_schedule.py  test_builtin_agentic_sdlc_tool.py  test_builtin_tools.py  test_chat_invoke_runtime_selection.py  test_chat_llm_config_error.py  test_chat_pdp_gate.py  test_chat_resume_request.py  test_chat_schedule_gate.py  test_client_context_turn_metadata.py  test_credential_exchange_client.py  test_directory_integration.py  test_general_purpose_tool_result_invariant.py  test_jwks_validate.py  test_jwt_middleware.py  test_llm.py  test_llm_clients.py  test_llm_clients_fallback.py  test_mcp_client.py  test_mcp_client_credential_refs.py  test_mcp_client_endpoint_self_heal.py  test_mcp_client_identity_headers.py  test_mcp_client_token_forwarding.py  test_mcp_endpoint_normalizer.py  test_mcp_file_persistence.py  test_mcp_load_classification.py  test_mcp_resilience_retry.py  test_mcp_server_id_sanitize.py  test_mcp_tool_schema_sanitizer.py  test_metrics_observability.py  test_middleware_builders.py  test_middleware_defaults.py  test_model_capabilities.py  test_mongo_credential_sources_self_heal.py  test_mongo_get_agent.py  test_multimodal_user_content.py  (+19 more)
ai_platform_engineering/integrations/slack_bot/: Makefile  a2a_client.py  app.py  pyproject.toml  requirements.txt  sse_client.py
ai_platform_engineering/integrations/webex_bot/: Makefile  README.md  __init__.py  __main__.py  a2a_client.py  app.py  config.py  dispatcher.py  langfuse_client.py  lifespan.py  main.py  mongodb_session.py  oauth2_client.py  pyproject.toml  requirements.txt  session_manager.py  thread_store.py  webex_client.py  webex_responder.py  webex_wdm.py  webex_websocket.py  webhook_setup.py
ai_platform_engineering/mcp/aws/: Makefile  README.md  __main__.py  pyproject.toml  server.py
ai_platform_engineering/mcp/confluence/: pyproject.toml  server.py
ai_platform_engineering/mcp/github/: Makefile  README.md  pyproject.toml
ai_platform_engineering/mcp/jira/: __main__.py  pyproject.toml  server.py
ai_platform_engineering/mcp/komodor/: __main__.py  pyproject.toml  server.py
ai_platform_engineering/mcp/litellm/: README.md  __main__.py  pyproject.toml  server.py
ai_platform_engineering/mcp/webex/: Makefile  (+3 more)
ai_platform_engineering/multi_agents/: __init__.py  __main__.py  agent_registry.py  directory_source.py  pyproject.toml
ai_platform_engineering/scheduler/: Dockerfile  README.md  pyproject.toml
ai_platform_engineering/utils/: README.md  __init__.py  audit_backend.py  audit_callback.py  audit_logger.py  auth_mcp_tools.py  budget_aware_tool.py  cel_evaluator.py  checkpointer.py  github_app_token_provider.py  logging_config.py  mcp_config.py  mongodb_client.py  obo_exchange.py  phoenix_config.py  prompt_config.py  pyproject.toml  store.py  subagent_prompts.py  test_audit_backend.py  test_audit_logger.py  token_sanitizer.py  tracing.py
evals/: Dockerfile  docker-compose.langfuse.yaml  pyproject.toml  run_evals_cli.py  run_local.py
evals/clients/: eval_client.py
evals/datasets/: multi_agent.yaml  single_agent.yaml
evals/tests/: test_single_graph_integration.py
integration/tests/: Makefile  README.md  integration_ai_platform_engineering.py  pyproject.toml  pytest.ini  test_prompts.yaml
(+7643 files in other folders)
