[project]
name = "ai-platform-engineering"
version = "0.3.2"
description = "Multi-Agent Collaboration & Workflow Automation - AI agents collaborating across tools and teams to deliver high quality results"
authors = [
  {name = "CNOE Contributors"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "a2a-sdk==0.3.0",
    "agntcy-app-sdk==0.4.0",
    "cnoe-agent-utils==0.3.15",
    "config==0.5.1",
    "cryptography==46.0.7",
    "fastapi==0.124.2",
    "httpx==0.28.1",
    "hvac==2.4.0",
    "langchain==1.2.15",
    "langchain-core==1.2.28",
    "langchain-mcp-adapters==0.2.1",
    "langfuse==3.14.3",
    "langgraph==1.1.6",
    "langmem==0.0.30",
    "mdformat==1.0.0",
    "prometheus-client==0.23.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyjwt==2.12.0",
    # Single-node mode dependencies (uses upstream deepagents library)
    "deepagents==0.3.8",
    "nest-asyncio==1.6.0",
    "clorm==1.6.1",
    # MongoDB client for reading task configs from shared MongoDB
    "pymongo==4.15.5",
    # Redis checkpoint saver and store for LangGraph persistence
    "langgraph-checkpoint-redis==0.3.6",
    # Postgres checkpoint saver and store for LangGraph persistence
    "langgraph-checkpoint-postgres==3.0.4",
    # psycopg binary bundle required by AsyncPostgresSaver in containerised environments
    # (no system libpq available); the binary wheel bundles its own libpq
    "psycopg[binary]==3.3.3",
    # MongoDB checkpoint saver for LangGraph persistence
    "langgraph-checkpoint-mongodb==0.3.1",
    # Async MongoDB driver for MongoDB store
    "motor==3.7.1",
]

[tool.pytest.ini_options]
testpaths = ["ai_platform_engineering/utils", "ai_platform_engineering/multi_agents"]
markers = [
  "integration: marks tests as integration tests requiring live services (deselect with '-m not integration')",
]

[tool.ruff]
# Allow lines to be as long as 300.
line-length = 300
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F403"]

[tool.ruff.lint.per-file-ignores]
"ai_platform_engineering/knowledge_bases/rag/ingestors/src/ingestors/webloader/loader/scrapy_worker.py" = ["E402"]
"ai_platform_engineering/knowledge_bases/rag/ingestors/src/ingestors/webloader/loader/worker_pool.py" = ["E402"]




[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    # Slack bot utils (e.g. tests importing ai.py) expect loguru at import time
    "loguru==0.7.3",
    "asyncpg==0.31.0",
    "psycopg[binary]==3.3.3",
    "pytest==9.0.3",
    "ruff==0.14.8",
]
unittest = [
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
]

[tool.uv]
override-dependencies = ["protobuf==5.29.6"]
constraint-dependencies = ["nltk==3.9.4", "pypdf==6.10.0"]
