[project]
name = "ai-platform-engineering"
version = "0.5.54-dev.3"
description = "Multi-Agent Collaboration & Workflow Automation - AI agents collaborating across tools and teams to deliver high quality results"
authors = [
  {name = "CNOE Contributors"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "beautifulsoup4==4.14.3",
    # `cachetools.TTLCache` backs the Keycloak JWKS / userinfo cache and the
    # PDP decision cache used by `utils/auth/keycloak_authz.py`. Pinned to
    # match the version already locked across every agent sub-package in
    # `ai_platform_engineering/agents/*/uv.lock` so the platform image
    # cannot drift from sub-agents.
    "cachetools==6.2.2",
    "cnoe-agent-utils==0.4.0",
    "config==0.5.1",
    "cryptography==49.0.0",
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "hvac==2.4.0",
    "langchain==1.3.9",
    "langchain-core==1.4.8",
    "langchain-mcp-adapters==0.2.1",
    "langfuse==3.14.3",
    "langgraph==1.2.6",
    "langmem==0.0.30",
    "mdformat==1.0.0",
    "prometheus-client==0.23.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyjwt==2.13.0",
    "requests==2.33.0",
    # Dynamic agents are built on the upstream deepagents library.
    "deepagents==0.3.8",
    # MongoDB client for shared MongoDB collections (conversations, skills, audit)
    "pymongo==4.15.5",
    # MongoDB checkpoint saver for LangGraph persistence (dynamic agents)
    "langgraph-checkpoint-mongodb==0.3.1",
    # Async MongoDB driver for MongoDB store
    "motor==3.7.1",
    # S3-compatible object storage client for audit log backend
    "boto3==1.42.7",
    # Parquet writer for columnar audit log files (S3 backend)
    "pyarrow==23.0.1",
]

[tool.pytest.ini_options]
testpaths = ["ai_platform_engineering/utils"]
markers = [
  "integration: marks tests as integration tests requiring live services (deselect with '-m not integration')",
]

[tool.ruff]
# Allow lines to be as long as 300.
line-length = 300
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F403"]

[tool.ruff.lint.per-file-ignores]
"ai_platform_engineering/knowledge_bases/rag/ingestors/src/ingestors/webloader/loader/scrapy_worker.py" = ["E402"]
"ai_platform_engineering/knowledge_bases/rag/ingestors/src/ingestors/webloader/loader/worker_pool.py" = ["E402"]
# Seed script contains intentionally long message strings (prose/code for MongoDB test data).
"scripts/seed-deprecated-agent-conversations.py" = ["E501"]




[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    # Slack bot utils (e.g. tests importing ai.py) expect loguru at import time
    "loguru==0.7.3",
    "mongomock==4.3.0",
    "pytest==9.0.3",
    "ruff==0.14.8",
]
unittest = [
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"

[tool.uv]
override-dependencies = ["protobuf==5.29.6"]
constraint-dependencies = ["pypdf==6.13.3"]
