[project]
name = "platform-engineer-evals"
version = "1.0.0"
description = "Evaluation system for Platform Engineer multi-agent workflows"
requires-python = ">=3.13"
dependencies = [
    # Core evaluation dependencies
    "pydantic==2.11.9",
    "fastapi==0.122.0",
    "uvicorn[standard]==0.37.0",
    "langfuse==3.14.5",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "python-dotenv==1.1.1",
    # Platform Engineer integration
    "a2a-sdk==0.2.16",
    "cnoe-agent-utils==0.3.14",
    # LangChain for LLM evaluation
    "langchain-core==1.2.31",
    "langchain-openai==1.1.14",
    "langchain-anthropic==0.3.21",
]

[project.scripts]
eval-webhook = "webhook.langfuse_webhook:main"
upload-dataset = "upload_dataset:main"

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "black==26.3.1",
    "mypy==1.18.2",
    "ruff==0.13.2",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"
[tool.uv]
constraint-dependencies = ["starlette>=0.50.0"]
