[project]
name = "autonomous-agents"
version = "0.1.0"
description = "Autonomous Agents - Schedule and trigger AI agents to run in the background"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "apscheduler==3.11.0",
    "cnoe-agent-utils==0.3.15",
    "httpx==0.28.1",
    "motor==3.7.1",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "mongomock-motor==0.0.36",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autonomous_agents"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff==0.15.5",
]
