[project]
name = "caipe-cron-runner"
version = "0.1.0"
description = "Per-schedule single-shot pod for caipe-scheduler. Reads SCHEDULE_ID, fetches schedule, POSTs chat, reports status."
requires-python = ">=3.13,<4.0"
dependencies = [
    "httpx==0.28.1",
]

[project.scripts]
caipe-cron-runner = "caipe_cron_runner.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caipe_cron_runner"]
