[project]
name = "dynamic-agents"
version = "0.1.0"
description = "Dynamic Agent Builder - Standalone agent service with deepagents 0.4.7"
requires-python = ">=3.13,<4.0"
dependencies = [
    "cel-python>=0.5.0",
    "fastapi==0.135.3",
    "uvicorn[standard]==0.34.2",
    "deepagents==0.4.7",
    "langchain-mcp-adapters==0.2.1",
    "langgraph-checkpoint-mongodb==0.3.1",
    "cnoe-agent-utils==0.3.15",
    "pymongo==4.12.1",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",

    "requests==2.33.0",
    "beautifulsoup4==4.13.4",
    "jinja2==3.1.6",
    "prometheus-client==0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_agents"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff==0.15.5",
]

[tool.uv]
constraint-dependencies = ["starlette>=0.50.0"]
