[project]
name = "ai-platform-engineering-multi-agents"
version = "0.1.4"
description = "AI Platform Engineering Multi-Agent Orchestrator"
authors = [
  {name = "CNOE Contributors"}
]
license = {text = "Apache-2.0"}
# readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langmem==0.0.30",
    # Core platform-engineer dependencies
    "click==8.3.1",
    "fastapi==0.115.14",
    "uvicorn==0.34.3",
    "config==0.5.1",
    "langchain-core==1.1.2",
    "langgraph==1.0.4",
    "langgraph==1.0.4",
    "langfuse==3.14.5",

    # Transport dependencies for agent connections
    "a2a-sdk (==0.3.0)",
    "agntcy-app-sdk==0.4.0",
    "cnoe-agent-utils==0.3.14",

    # Basic utilities
    "python-dotenv==1.1.1",
    "pydantic==2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_platform_engineering"]

[tool.ruff]
line-length = 300
indent-width = 2

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F403"]

[tool.uv]
constraint-dependencies = ["nltk==3.9.4"]
