[project]
name = "caipe-scheduler"
version = "0.1.0"
description = "Cron schedule registry + k8s CronJob orchestrator for CAIPE."
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.3",
    "pymongo==4.12.1",
    "kubernetes==35.0.0",
    "croniter==6.2.2",
    "pytz==2025.2",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.5",
]

[project.scripts]
caipe-scheduler = "caipe_scheduler.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caipe_scheduler"]

[tool.uv]
constraint-dependencies = ["starlette>=0.50.0"]
