[project]
name = "agent_jira"
version = "0.1.0"
license = "Apache-2.0"
description = "An Jira natural language agent using LangChain, LangGraph, and MCP."
readme = "README.md"
authors = [
    { name = "Omar Sayed", email = "osayed@cisco.com" },
]
maintainers = [
    { name = "Omar Sayed", email = "osayed@cisco.com" },
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "a2a-sdk==0.3.0",
    "agentevals==0.0.7",
    "agntcy-app-sdk==0.4.5",
    "ai-platform-engineering-utils",
    "click==8.3.1",
    "langchain-anthropic==1.0.0",
    "langchain-core==1.2.26",
    "langchain-mcp-adapters==0.2.1",
    "langchain-openai==1.1.0",
    "langgraph==1.0.4",
    "pytest==8.3.5",
    "tabulate==0.9.0",
    "keyring==25.6.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.1",
    "cnoe-agent-utils==0.3.14",
    "pydantic==2.12.5",
    "fastmcp==3.2.0",
    "mcp==1.26.0",
    "mcp-jira",
    "prometheus_client==0.23.1",
    "typing-extensions==4.15.0",
]
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.poetry.scripts]
agent_jira_a2a = "agent_jira.protocol_bindings.a2a_server:main"

[tool.poetry.dependencies]
uv = "^0.7.5"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Allow lines to be as long as 140.
line-length = 140
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]
ignore = ["F403"]

[tool.uv]
constraint-dependencies = ["nltk==3.9.4"]

[tool.uv.sources]
ai-platform-engineering-utils = { path = "../../utils" }
mcp-jira = { path = "mcp" }
