[project]
name = "mas-agent-base"
version = "0.2.1"
description = "MAS Agent Core - Shared base classes and utilities for building A2A agents."
authors = [
  {name = "Andrew Dickinson"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "a2a-sdk==0.3.0",
  "cnoe-agent-utils==0.3.14",
  "langchain-core==1.2.28",
  "langchain-mcp-adapters==0.2.1",
  "langgraph==1.1.6",
  "pydantic==2.12.5",
  "typing-extensions==4.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.8",
]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "F",
]
ignore = ["F403"]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.uv]
override-dependencies = ["protobuf==5.29.6"]
constraint-dependencies = ["fastmcp==3.2.3", "nltk==3.9.4", "pypdf==6.10.0"]
