# Copyright 2025 CNOE Contributors
# SPDX-License-Identifier: Apache-2.0

[project]
name = "agent-splunk"
version = "1.0.0"
description = "Splunk AI Agent for log search, monitoring, and alert management"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [
    { name = "Rehan Agrawal", email = "rehagraw@cisco.com" },
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "a2a-sdk==0.3.0",
    "agentevals==0.0.7",
    "agntcy-app-sdk==0.4.5",
    "ai-platform-engineering-utils",
    "slim-bindings==0.6.3",
    "click==8.3.1",
    "langchain-anthropic==1.0.0",
    "langchain-core==1.2.31",
    "langchain-mcp-adapters==0.2.1",
    "langchain-openai==1.1.14",
    "langgraph==1.1.6",
    "pytest==9.0.3",
    "tabulate==0.9.0",
    "rich==14.1.0",
    "sseclient==0.0.27",
    "fastapi==0.135.3",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "python-dotenv==1.2.1",
    "cnoe-agent-utils==0.3.14",
    "pydantic==2.12.5",
    "fastmcp==3.2.3",
    "mcp==1.26.0",
    "mcp-splunk",
    "prometheus_client==0.23.1",
    "typing-extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.2.1",
    "ruff==0.12.11",
    "mypy==1.17.1",
]

[project.scripts]
agent-splunk-a2a = "agent_splunk.protocol_bindings.a2a_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_splunk"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["F403", "F401", "ANN401", "S101", "PLR0913", "PLR0912", "PLR0915", "C901", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN"]
"**/protocol_bindings/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "a2a.*",
    "langchain.*",
    "langgraph==1.1.6",
    "fastmcp.*",
    "cnoe_agent_utils.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=agent_splunk --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.uv]
override-dependencies = ["protobuf==5.29.6"]
constraint-dependencies = ["fastmcp==3.2.3", "nltk==3.9.4", "pypdf==6.10.2", "starlette==0.50.0"]

[tool.uv.sources]
ai-platform-engineering-utils = { path = "../../utils" }
mcp-splunk = { path = "mcp" }