[project]
name = "tome-agent"
version = "0.1.0"
license = "Apache-2.0"
description = "Tome agent — a Claude Agent SDK ingest/chat service for the caipe Tome wiki app."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "claude-agent-sdk==0.2.103",
    "fastapi==0.137.1",
    "uvicorn[standard]==0.49.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pyyaml==6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tome_agent"]

[tool.ruff]
target-version = "py312"
