[project]
name = "agent_victorops"
version = "0.1.0"
license = {text = "Apache-2.0"}
description = "A VictorOps natural language agent using LangChain, LangGraph, and MCP."
readme = "README.md"
authors = [
    { name = "Ismael Papa", email = "ipapa@cisco.com" },
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "a2a-sdk==0.3.0",
    "agntcy-app-sdk==0.4.5",
    "ai-platform-engineering-utils",
    "click==8.3.1",
    "cnoe-agent-utils==0.3.14",
    "langchain-core==1.2.28",
    "langchain-mcp-adapters==0.2.1",
    "langgraph==1.0.9",
    "mcp-victorops",
    "prometheus-client==0.23.1",
    "python-dotenv==1.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.2",
]

[tool.ruff]
# Allow lines to be as long as 140.
line-length = 140
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]
ignore = ["F403"]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "parsers: marks tests as parser tests"
]

[tool.uv.sources]
ai-platform-engineering-utils = { path = "../../utils" }
mcp-victorops = { path = "./mcp" }
